--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,100 @@
+body {
+  background-image: url("https://images.pexels.com/photos/6890323/pexels-photo-6890323.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-repeat: no-repeat;
+  min-height: 100%;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
+a {
+  text-decoration: none;
+}
+a:active {
+  color: rgb(212, 62, 85);
+}
+
+a:visited {
+  color: rgb(212, 62, 85);
+}
+.backhome {
+  text-align: center;
+  font-size: 20px;
+}
+footer {
+  text-align: center;
+  color: rgb(212, 62, 85);
+}
 h1 {
-  text-decoration: underline;
+  color: rgb(212, 62, 85);
+  text-align: center;
+  font-size: 40px;
+}
+.sushi-picture {
+  display: block;
+  margin: 0 auto;
+}
+.title-recipe {
+  color: rgb(212, 62, 85);
+  text-align: center;
+  font-size: 55px;
+}
+.recipes {
+  text-align: center;
+}
+.rice,
+.bento-box,
+.bacon-eggs {
+  color: rgb(212, 62, 85);
+  font-size: 30px;
+  width: 90%;
+  max-width: 500px;
+  background-color: lightpink;
+  margin: 100px auto 0;
+  padding: 30px 30px;
+  margin-bottom: 50px;
+  border-radius: 10px;
+  box-shadow: 9px, 5px, 5px;
+}
+.direction,
+.ingredient {
+  font-size: 25px;
+  color: rgb(212, 62, 85);
+}
+ol,
+ul,
+p {
+  font-size: 19px;
+  color: rgb(212, 62, 85);
+}
+.homepage {
+  text-align: center;
+}
+.ricebody,
+.bentobox-body,
+.baconeggs-body {
+  width: 90%;
+  max-width: 500px;
+  background-color: #d3d6db;
+  margin: 100px auto 0;
+  padding: 35px 35px;
+  margin-bottom: 50px;
+}
+.anime-riceball,
+.anime-bentoboxs,
+.eggs-and-bacon {
+  display: block;
+  margin: 0 auto;
+  max-width: 70%;
+  padding: 30px;
+}
+.about {
+  font-size: 50px;
+  font-weight: bold;
+  text-align: center;
+  color: rgb(212, 62, 85);
+  max-width: 700px;
+  background-color: lightpink;
+  margin: 100px auto 0;
+  padding: 35px 35px;
+  margin-bottom: 50px;
 }
